--- a/package.json
+++ b/package.json
@@ -3,5 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "author": "Anri Asaturov"
+  "author": "Anri Asaturov <anri82@gmail.com>",
+  "private": false,
+  "scripts": {
+    "validate": "yarn run verify && yarn run test",
+    "verify": "run-p -ln verify:*",
+    "verify:prettier": "prettier -c 'src/**/*.+(js|ts)'",
+    "verify:ts": "tsc --noEmit",
+    "fix": "run-p -ln fix:*",
+    "fix:prettier": "yarn run verify:prettier --write",
+    "test": "jest",
+    "precommit": "yarn validate"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.3",
+    "jest": "^26.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.2"
+  }
 }
