--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "verify:ts": "tsc --noEmit",
     "fix": "run-p -ln fix:*",
     "fix:prettier": "yarn run verify:prettier --write",
-    "test": "jest",
-    "precommit": "yarn validate"
+    "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn validate"
+    }
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
